<resources>
    <string name="app_name">JobNotes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_to">Welcome to</string>
    <string name="jobnotes">Jobnotes</string>
    <string name="email_pattern">Username / Staff ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="advanced_setting">Advanced Setting</string>
    <string name="copyright">Copyright &#169; 2016-2017 snowplus.com</string>

    <string name="title_activity_splash2">Splash2</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="save">SAVE</string>
    <string name="priority_listing">Priority Listing</string>
    <string name="domain_name">Domain name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="gps_point">GPS Point</string>
    <string name="special_notes">Special Notes</string>
    <string name="view_detail">VIEW DETAILS</string>
    <string name="location">Location</string>
    <string name="property">Property</string>
    <string name="manager_phone">Manager Phone</string>
    <string name="plowing_status">Plowing Status (only)</string>


</resources>
