<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="horizontal"

    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:orientation="vertical"

        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_login" />

        <TextView
            android:id="@+id/tv_login_welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome_to"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_login_jobnotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobnotes"
            android:textColor="@android:color/white"
            android:textSize="28sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"

            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/et_login_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableRight="@mipmap/email_correct_tick"
                    android:hint="@string/email_pattern"
                    android:inputType="textEmailAddress"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"

            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"

                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_selecter"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#ffffff" />


        <TextView
            android:id="@+id/tv_login_advanced_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/advanced_setting"
            android:textColor="#ffffff" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_advanced_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/copyright"
        android:layout_marginBottom="30dp"
        android:textColor="#ffffff" />
</RelativeLayout>

