<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:paddingBottom="30dp">
    <TextView
        android:id="@+id/tv_advance_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawableLeft="@mipmap/back_arrow"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@mipmap/login_bg"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_login" />

        <TextView
            android:id="@+id/tv_login_welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome_to"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_login_jobnotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobnotes"
            android:textColor="@android:color/white"
            android:textSize="28sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"

            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#ffffff"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/et_advanced_setting_domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableRight="@mipmap/email_correct_tick"
                    android:hint="@string/domain_name"
                    android:inputType="text"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>





        <TextView
            android:id="@+id/tv_advanced_setting_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_selecter"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:textColor="#ffffff" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_advanced_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="#ffffff" />
</RelativeLayout>

