<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d5e1f1"
    android:orientation="vertical"
    android:clickable="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f8f8"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f8f8f8"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp"
            android:visibility="visible"
            android:weightSum="7">

            <TextView
                android:id="@+id/tv_property_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/priority_listing"
                android:textColor="#1b2838"
                android:textSize="18sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:maxHeight="160dp"
                android:minHeight="100dp">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:layout_gravity="center" />


                <ImageView

                    android:id="@+id/im_property_map"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:maxHeight="160dp"
                    android:minHeight="100dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/map"
                    android:visibility="visible" />



            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/ll_listing_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_address_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/icon_address"
                        android:gravity="center"
                        android:text="@string/address"
                        android:textColor="#46505c"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="test"
                        android:textColor="#46505c"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#d5e1f0" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_phone_number_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/icon_phone"
                        android:gravity="center"
                        android:text="@string/phone"
                        android:textColor="#46505c"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="test"
                        android:textColor="#46505c"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:background="#d5e1f0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="horizontal"

                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/ll_listing_gps"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_gps_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/icon_gps"
                        android:gravity="center"
                        android:text="@string/gps_point"
                        android:textColor="#46505c"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="test"
                        android:textColor="#46505c"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#d5e1f0" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_special_notes_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/icon_notes"
                        android:gravity="center"
                        android:text="@string/special_notes"
                        android:textColor="#46505c"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_special_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textColor="#46505c"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_view_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#368be8"
            android:padding="15dp"
            android:text="@string/view_detail"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>
